--- a/ex67/index.html
+++ b/ex67/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header id="home">
+        <!--navbar-->
         <nav id="nav">
             <div class="nav-center">
                 <!--nav header-->
@@ -22,17 +23,18 @@
                        <span class="menu"></span>
                     </button>
                 </div>
+                <!--links-->
                 <div class="links-container">
                     <ul class="links">
-                        <li><a href="#Home" class="scroll-link" id="c1">Home</a></li>
+                        <li><a href="#home" class="scroll-link" id="c1">Home</a></li>
                         <li><a href="#about" class="scroll-link" id="c2">about</a></li>
-                        <li><a href="#Services" class="scroll-link" id="c3">Services</a></li>
-                        <li><a href="#Tours" class="scroll-link" id="c4">Tours</a></li>
+                        <li><a href="#services" class="scroll-link" id="c3">Services</a></li>
+                        <li><a href="#tours" class="scroll-link" id="c4">Tours</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <!--sobre-->
+        <!--banner-->
         <div class="banner">
             <div class="container">
               <h1>scroll project</h1>
@@ -43,11 +45,9 @@
               </p>
               <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
             </div>
-          </div>
-  
-       
-        
+         </div>                
     </header>
+    <!--about-->
     <section id="about" class="section">
         <div class="title">
             <h2>About<span> us</span></h2>
