--- a/ex68/index.html
+++ b/ex68/index.html
@@ -11,13 +11,19 @@
     <section>
         <div class="title">
             <h2>about</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, quas quis enim impedit eligendi iste explicabo dicta sequi laborum veniam eveniet voluptas et. Dolorum inventore quisquam quas tempora itaque veniam?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
         </div>
         <div class="about-center section-center">
             <article>
                 <img src="./hero-bcg.jpeg" alt="about picture">
             </article>
-            <article></article>
+            <article   class="about">
+                <!--btn container-->
+                <div class="btn-container">
+                    <button class="tab-btn"></button>
+                </div>
+
+            </article>
             <article></article>
         </div>
     </section>
