--- a/ex68/index.html
+++ b/ex68/index.html
@@ -20,7 +20,9 @@
             <article   class="about">
                 <!--btn container-->
                 <div class="btn-container">
-                    <button class="tab-btn"></button>
+                    <button class="tab-btn" data-id="history">history</button>
+                    <button class="tab-btn" data-id="vision">vision</button>
+                    <button class="tab-btn" data-id="goals">goals</button>
                 </div>
 
             </article>
