--- a/exAlura/index.html
+++ b/exAlura/index.html
@@ -6,19 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <img  id="banner" src="banner.jpg" alt="imagem">
     <article>
         <h1>Sobre a Barbearia Alura</h1>
         <span></span>
         <p>
         Localizada no coração da cidade a <strong id="Bar">Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
        </p>
-        <p id="c"><em><strong>"Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+        <p ><em>"Nossa missão é: "<strong id="c">Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
         <p>
             Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
         </p>
-       
+       <h2>Benefícios</h2>
+       *Atedimento aos clientes
+       *Espaço diferênciado
+       *Localização
+       *Profissionais Qualificados
     </article>
 
 
