--- a/exAlura/index.html
+++ b/exAlura/index.html
@@ -21,10 +21,12 @@
             Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
         </p>
        <h2>Benefícios</h2>
-       *Atedimento aos clientes
-       *Espaço diferênciado
-       *Localização
-       *Profissionais Qualificados
+       <ul>
+           <li>*Atedimento aos clientes</li>
+           <li>*Espaço diferênciado</li>
+           <li>*Localização</li>
+           <li>*Profissionais Qualificados</li>
+       </ul>
     </article>
 
 
