--- a/exAlura/index.html
+++ b/exAlura/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <header>
+       <h1 > Barbearia Alura</h1>
+    </header>
     <img  id="banner" src="banner.jpg" alt="imagem">
+    
     <article>
-        <h1>Sobre a Barbearia Alura</h1>
+        <h2 class="titulo-center">Sobre a Barbearia Alura</h2>
         <span></span>
         <p>
         Localizada no coração da cidade a <strong id="Bar">Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
@@ -20,14 +24,18 @@
         <p>
             Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
         </p>
-       <h2>Benefícios</h2>
-       <ul>
-           <li>*Atedimento aos clientes</li>
-           <li>*Espaço diferênciado</li>
-           <li>*Localização</li>
-           <li>*Profissionais Qualificados</li>
-       </ul>
+       
     </article>
+    <div id="container">
+        <h3 class="titulo-center">Benefícios</h3>
+           <ul>
+               <li class="item">*Atedimento aos clientes</li>
+               <li class="item">*Espaço diferênciado</li>
+               <li class="item">*Localização</li>
+               <li class="item">*Profissionais Qualificados</li>
+           </ul>
+           <img id="bene" src="beneficios.jpg" alt="beneficios">
+    </div>
 
 
 </body>
