--- a/exAlura2/index.html
+++ b/exAlura2/index.html
@@ -20,7 +20,7 @@
        
         <nav class="nav">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Produtos</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
