--- a/exAlura2/index.html
+++ b/exAlura2/index.html
@@ -21,13 +21,34 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="https://www.twitch.tv/rpgtv" target="_blank">Contato</a></li>
             </ul>
         </nav>
         
     </header>
-    
+    <main>
+        <ul class="grade">
+            <li>
+                <h2>cabelo</h2>
+                <img src="image/cabelo.jpg" alt="cabelo">
+                <p >Na tesoura  ou na máquina, como  o cliente preferir</p>
+                <p class="texto">R$ 25,00</p>
+            </li>
+            <li>
+                <h2>barba</h2>
+                <img src="image/barba.jpg" alt="barba">
+                <p>Corte e desenho proficional  de barba</p>
+                <p class="texto">R$ 18,00</p>
+            </li>
+            <li>
+                <h2>cabelo+barba</h2>
+                <img src="image/cabelo+barba.jpg" alt="CB">
+                <p >Pacote completo de cabelo  e barba</p>
+                <p class="texto">R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
     <article></article>
     <footer></footer>
     <script src="./js/app.js"></script>
