--- a/exAlura03/index.html
+++ b/exAlura03/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos</title>
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/estilo.css">
 
 
 </head>
@@ -35,6 +36,7 @@
         <label for="telefone">telefone</label>
         <input type="text" id="telefone">
         <input type="submit" value="Enviar-Formulário">
+
     </form>
     </main>
     <footer>
