--- a/exAlura4/index.html
+++ b/exAlura4/index.html
@@ -48,13 +48,16 @@
         </section>
         <section class="q"  >
             <h3 class="titulo-center">Benefícios</h3>
-               <ul class="center">
-                   <li class="item">🎇Atedimento aos clientes</li>
-                   <li class="item">🎇Espaço diferênciado</li>
-                   <li class="item">🎇Localização</li>
-                   <li class="item">🎇Profissionais Qualificados</li>
-               </ul>
-               <img  src="./image/beneficios.jpg" alt="beneficios"  class="beneficios">
+               <div class="conteudo-beneficios">
+                   <ul class="center">
+                       <li class="item">🎇Atedimento aos clientes</li>
+                       <li class="item">🎇Espaço diferênciado</li>
+                       <li class="item">🎇Localização</li>
+                       <li class="item">🎇Profissionais Qualificados</li>
+                       <li class="item">🎇Pontualidade</li>
+                       <li class="item">🎇Limpeza</li>
+                   </ul><img  src="./image/beneficios.jpg" alt="beneficios"  class="beneficios">
+               </div>
             <iframe  class="c" width="600" height="350" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     
