--- a/exAlura4/index.html
+++ b/exAlura4/index.html
@@ -44,7 +44,7 @@
         </section>
         <section class="mapa">
             <h3 class="titulo-center" id="text-center">Nosso estabelecimento </h3>
-            <p>Nosso estabelecimento está localizado  no coração da cidade.</p>
+            <p id="text-center">Nosso estabelecimento está localizado  no coração da cidade.</p>
             <div class="mapa-conteudo"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3657.1066935121016!2d-46.65390548552208!3d-23.564611267596295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1664974469367!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;"  style="margin:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
         </section>
@@ -60,7 +60,7 @@
                        <li class="item">Limpeza</li>
                    </ul><img  src="./image/beneficios.jpg" alt="beneficios"  class="beneficios">
                </div>
-            <iframe  class="c" width="600" height="350" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  class="c" width="100%" height="350" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     
 
