--- a/exAlura05/index.html
+++ b/exAlura05/index.html
@@ -22,17 +22,17 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button onclick="butao()" class="tecla tecla_pom">Pom</button>
-        <button onclick="butao1()" class="tecla tecla_clap">Clap</button>
-        <button onclick="butao2()" class="tecla tecla_tim">Tim</button>
+        <button class="tecla tecla_pom">Pom</button>
+        <button class="tecla tecla_clap">Clap</button>
+        <button class="tecla tecla_tim">Tim</button>
 
-        <button onclick="butao3()" class="tecla tecla_puff">Puff</button>
-        <button onclick="butao4()" class="tecla tecla_splash">Splash</button>
-        <button onclick="butao5()" class="tecla tecla_toim">Toim</button>
+        <button class="tecla tecla_puff">Puff</button>
+        <button class="tecla tecla_splash">Splash</button>
+        <button class="tecla tecla_toim">Toim</button>
 
-        <button onclick="butao6()" class="tecla tecla_psh">Psh</button>
-        <button onclick="butao7()" class="tecla tecla_tic">Tic</button>
-        <button onclick="butao8()" class="tecla tecla_tom">Tom</button>
+        <button class="tecla tecla_psh">Psh</button>
+        <button class="tecla tecla_tic">Tic</button>
+        <button class="tecla tecla_tom">Tom</button>
     </section>
 
     <audio  src="sounds/keyq.wav" id="som_tecla_pom"></audio>
