--- a/exemplo/index.html
+++ b/exemplo/index.html
@@ -22,12 +22,14 @@
         <input type="button" value="*">
         <input type="button" value="0">
         <input type="button" value="#">
+      
     </section>
+ 
     <input type="tel" placeholder="Digite o seu Telefone">
 
 
 
-
+ <script src="main.js"></script>
     
 </body>
 </html>
