--- a/arquiteturaCss/index.html
+++ b/arquiteturaCss/index.html
@@ -15,6 +15,15 @@
         <link rel="stylesheet" href="./assets/css/menu-lista.css">
         <link rel="stylesheet" href="./assets/css/menu-item.css">
         <link rel="stylesheet" href="./assets/css/menu-link.css">
+        <!--Banner para imagem-->
+        <link rel="stylesheet" href="./assets/css/banner.css">
+        <link rel="stylesheet" href="./assets/css/banner__imagem.css">
+        <link rel="stylesheet" href="./assets/css/banner__titulo.css">
+        <!--Banner para descrição-->
+        <link rel="stylesheet" href="./assets/css/sobre.css">
+        <link rel="stylesheet" href="./assets/css/sobre__titulo.css">
+        <link rel="stylesheet" href="./assets/css/sobre__descricao.css">
+
 
         
     </head>
@@ -22,15 +31,24 @@
         <header class="cabecalho">
             <img src="assets/img/logo.jpg" alt="logo-caixa-de-frutas" class="menu">
             <nav>
-                <ul class="menu-lista">
-                    <li class="menu-item"><a href="#" class="menu-link">inicio</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">receitas</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">quem somos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">comunidades ˅
+                <ul class="menu__lista">
+                    <li class="menu__item"><a href="#" class="menu__link">início</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">receitas</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">quem somos</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link">comunidades ˅
                     </a></li>
                 </ul>
             </nav>
 
         </header>
+        <section class="banner">
+            <img  class="banner__imagem" src="assets/img/banner.jpg" alt="caixa-cheias-de-frutas">
+            <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
+        </section>
+        <section class="sobre">
+            <h2  class="sobre__titulo"> Receitas para economizar e ganhar saúde</h2>
+            <p class="sobre__descricao">Nossas receitas ajudam você  a aproveitar melhor os alimentos,economizar,<br> ganhar tempo e praticidade.</p>
+            
+        </section>
     </body>
 </html>
