--- a/quadrados-flex/index.html
+++ b/quadrados-flex/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="flexContainer" >
 
-        <div class="flexItem primeiraRow"></div>
+        <div class="flexItem primeiraRow primeira"></div>
         <div class="flexItem primeiraRow"></div>
         <div class="flexItem primeiraRow"></div>
         <div class="flexItem primeiraRow"></div>
