--- a/projeto-apeperia/index.html
+++ b/projeto-apeperia/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="./img/logo-apeperia.svg" alt="Logo da Apeperia">
         <nav>
             <ul>
                 <li><a href="#">Sobre</a></li>
@@ -23,13 +23,14 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-     
-
-
-
-
-
     </header>
+    <main>     
+        <section>
+            <h1>Aplicativos Na Medida</h1>
+            <p>Apeperia tem um jeito inovador de comparar e montar aplicativos para pequenas e médias empresas.</p>
+            <a href="#">Conheça os planos</a>
+        </section>
+    </main>
  
 </body>
 </html>
