--- a/projeto-apeperia/index.html
+++ b/projeto-apeperia/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="../projeto-apeperia/css/reset.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <img  class=""src="./img/logo-apeperia.svg" alt="Logo da Apeperia">
-        <img  class=""src="./img/logo-apeperia.svg" alt="Logo da Apeperia">
-        <nav>
-            <ul>
+    <header>
+        <img  src="./img/logo-apeperia.svg" alt="Logo da Apeperia">
+       
+        <nav >
+            <ul >
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Planos</a></li>
                 <li><a href="#">Blog</a></li>
