--- a/projeto-apeperia/index.html
+++ b/projeto-apeperia/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="../projeto-apeperia/css/chamada.css">
     <link rel="stylesheet" href="../projeto-apeperia/css/planos.css">
     <link rel="stylesheet" href="../projeto-apeperia/css/reset.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
