--- a/projeto-apeperia/index.html
+++ b/projeto-apeperia/index.html
@@ -160,13 +160,14 @@
                     Rua Vergueiro, 3185
                     Vila Mariana, São Paulo</br>
                     <article class="institucional__contato">
-                        <p><a href="#" class="institucional__contanto-telefone"></a>
-                           <a href="#" class="institucional__contato-email"></a>
+                        <p><a href="tel:+551155712751" class="institucional__contanto-telefone">(11) 5571-2751</a>ou
+                           <a href="mailto:contato@apeperia.com" class="institucional__contato-email">contato@apeperia.com</a>
                         </p>
                     </article>
 
                     
                 </address>
+                <video src="img/formacao-java.mp4" class="institucional__video"></video>
             </section>
 
 
