--- a/Expressões Regulares/index.html
+++ b/Expressões Regulares/index.html
@@ -60,3 +60,11 @@
     <script src="js/regex.js"></script>
     </body>
 </html>
+<!--
+    ? - zero ou  uma vez.
+    * - zero ou  mais vezes.
+    * - uma ou  mais vezes.
+    {n} - exatamente n vezes.
+    {n,} - no mínimo n vezes.
+    {n,m} - no mínimo n+1 vezes, no máximo m vezes.
+-->
