--- a/Expressões Regulares/index.html
+++ b/Expressões Regulares/index.html
@@ -60,11 +60,22 @@
     <script src="js/regex.js"></script>
     </body>
 </html>
-<!--
+<!--ÂNCORAS
+    \b- word boundary
+    ^ - início do alvo 
+    $ - fim do alvo
+    QUANTIFIER
     ? - zero ou  uma vez.
     * - zero ou  mais vezes.
-    * - uma ou  mais vezes.
+    + - uma ou  mais vezes.
     {n} - exatamente n vezes.
     {n,} - no mínimo n vezes.
     {n,m} - no mínimo n+1 vezes, no máximo m vezes.
+
+    CLASSES DE CHAR - []
+    [A-Z] - letras de A até Z
+    [123] - 1,2 OU 3 
+    \d - todos os dígitos  [0-9]
+    \s - whitespace [\t\r\n\f]
+    \ -wordchar [A-Z a-z 0-9_]
 -->
