--- a/Expressões Regulares/index.html
+++ b/Expressões Regulares/index.html
@@ -78,4 +78,8 @@
     \d - todos os dígitos  [0-9]
     \s - whitespace [\t\r\n\f]
     \ -wordchar [A-Z a-z 0-9_]
+    GRUPOS
+    (\w+) - grupo de word chars
+    (\w+)? - grupo opicional
+    (?:\w+) -non-capturing group
 -->
