--- a/validacao-doguito-main/cadastro.html
+++ b/validacao-doguito-main/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,17 +24,17 @@
                 <fieldset>
                     <legend class="formulario__legenda">Informações básicas</legend>
                     <div class="input-container">
-                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome">
+                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
                         <label class="input-label" for="nome">Nome</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="email" id="email" class="input" type="text" placeholder="Email">
+                        <input name="email" id="email" class="input" type="email" placeholder="Email"  required>
                         <label class="input-label" for="email">Email</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="senha" id="senha" class="input" type="text" placeholder="Senha">
+                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[@#$%^&_=+-]).{6,12}$" title="A senha deve conter a 6 a 12 carecteres ter uma letra maiuscula um numero e não de conter simbolos" required >
                         <label class="input-label" for="senha">Senha</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
@@ -42,7 +42,7 @@
                 <fieldset>
                     <legend class="formulario__legenda">Informações pessoais</legend>
                     <div class="input-container">
-                        <input name="nascimento" id="nascimento" class="input" type="text" placeholder="Data de nascimento">
+                        <input name="nascimento" id="nascimento" class="input" type="date" placeholder="Data de nascimento" data-tipo="dataNascimento"  required>
                         <label class="input-label" for="nascimento">Data de nascimento</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
@@ -79,5 +79,8 @@
             </form>
         </section>
     </main>
+    <script src="validacao.js"></script>
+
 </body>
 </html>
+^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[!@#$%^&_=+-]).{6,12}$
