--- a/validacao-doguito-main/cadastro.html
+++ b/validacao-doguito-main/cadastro.html
@@ -23,18 +23,18 @@
             <form action="./cadastro_concluido.html" class="formulario flex flex--coluna">
                 <fieldset>
                     <legend class="formulario__legenda">Informações básicas</legend>
-                    <div class="input-container">
-                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" required>
-                        <label class="input-label" for="nome">Nome</label>
+                    <div class="input-container input-container--invalido">
+                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" date-tipo="nome" required>
+                        <label class="input-label" for="nome" >Nome</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email"  required>
+                        <input name="email" id="email" class="input" type="email" placeholder="Email"   date-tipo="email" required>
                         <label class="input-label" for="email">Email</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[@#$%^&_=+-]).{6,12}$" title="A senha deve conter a 6 a 12 carecteres ter uma letra maiuscula um numero e não de conter simbolos" required >
+                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha"   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[@#$%^&_=+-]).{6,12}$" title="A senha deve conter a 6 a 12 carecteres ter uma letra maiuscula um numero e não de conter simbolos" date-tipo="senha"  required >
                         <label class="input-label" for="senha">Senha</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
@@ -79,7 +79,7 @@
             </form>
         </section>
     </main>
-    <script src="validacao.js"></script>
+    <script src="app.js" type="module"></script>
 
 </body>
 </html>
