--- a/validacao-doguito-main/cadastro.html
+++ b/validacao-doguito-main/cadastro.html
@@ -24,17 +24,17 @@
                 <fieldset>
                     <legend class="formulario__legenda">Informações básicas</legend>
                     <div class="input-container input-container--invalido">
-                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" date-tipo="nome" required>
+                        <input name="nome" id="nome" class="input" type="text" placeholder="Nome" data-tipo="nome" required>
                         <label class="input-label" for="nome" >Nome</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email"   date-tipo="email" required>
+                        <input name="email" id="email" class="input" type="email" placeholder="Email"   data-tipo="email" required>
                         <label class="input-label" for="email">Email</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
                     <div class="input-container">
-                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha"   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[@#$%^&_=+-]).{6,12}$" title="A senha deve conter a 6 a 12 carecteres ter uma letra maiuscula um numero e não de conter simbolos" date-tipo="senha"  required >
+                        <input name="senha" id="senha" class="input" type="password" placeholder="Senha"   pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?!.*[@#$%^&_=+-]).{6,12}$" title="A senha deve conter a 6 a 12 carecteres ter uma letra maiuscula um numero e não de conter simbolos" data-tipo="senha"  required >
                         <label class="input-label" for="senha">Senha</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
