--- a/validacao-doguito-main/cadastro.html
+++ b/validacao-doguito-main/cadastro.html
@@ -79,7 +79,7 @@
             </form>
         </section>
     </main>
-    <script src="app.js" type="module"></script>
+    <script src="js/app.js" type="module"></script>
 
 </body>
 </html>
