--- a/-robotron-2000-projeto_inicial/objeto.html
+++ b/-robotron-2000-projeto_inicial/objeto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estolos.css">
 </head>
 
-<button  data-mostrar data-recolher >Aluratintas em estoque:</button>
+<button  data-mostrar  >Aluratintas em estoque:</button>
 
 
 <ul class="lista">
