--- a/-robotron-2000-projeto_inicial/index.html
+++ b/-robotron-2000-projeto_inicial/index.html
@@ -14,8 +14,10 @@
 </head>
 <body>
     <main>
+        
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <img class="robo" src="./img/Robotron 2000 - Amarelo/Robotron 2000 - Amarelo.png" alt="Robotron" id="robotron"data-robo>
+            <button data-cor class="Brobo">Cor DO ROBO</button>
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
@@ -94,10 +96,11 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Iniciar produção" class="producao" id="producao">
+                <input type="submit" value="Iniciar produção" class="producao" id="producao" >
             </form>
         </section>
     </main>
     <script src="main.js"></script>
+    <script src="coresR.js"></script>
 </body>
 </html>
