--- a/-robotron-2000-projeto_inicial/index.html
+++ b/-robotron-2000-projeto_inicial/index.html
@@ -16,8 +16,8 @@
     <main>
         
         <section class="robotron">
-            <img class="robo" src="./img/Robotron 2000 - Amarelo/Robotron 2000 - Amarelo.png" alt="Robotron" id="robotron"data-robo>
-            <button data-cor class="Brobo">Cor DO ROBO</button>
+            <img class="robo" src="./img/Robotron 2000 - Amarelo.png" alt="Robotron" id="robotron"data-cor>
+            <button data-botao class="Brobo" >Cor DO ROBO</button>
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
