--- a/mochila-de-viagem/index.html
+++ b/mochila-de-viagem/index.html
@@ -27,7 +27,9 @@
         </div>
 
         <ul class="lista" id="lista">
-        </ul>
+            <li class="item"><strong>7</strong>Camisas</li>
+            <li class="item"><strong>1</strong>Calça</li>
+            
     </main>
 
     <script src="./js/main.js"></script>
