--- a/primeiro_teste_html/index.html
+++ b/primeiro_teste_html/index.html
@@ -7,6 +7,8 @@
     <title>Primeiro teste</title>
 </head>
 <body>
+    <input>
+    <button>Compare com o meu segredo </button>
 <script src="main.js"></script>
 </body>
 </html>
