--- a/monibank-main/pages/abrir-conta-form.html
+++ b/monibank-main/pages/abrir-conta-form.html
@@ -54,39 +54,39 @@
 
         <section class="formulario">
             <div class="formulario__container">
-                <img src="../img/status-1.png" alt="Etapa um de três" class="formulario__etapas">
+                <img src="../img/status-1.png" alt="Etapa um de três" class="formulario__etapas" >
                 <h2 class="formulario__titulo-texto">Preencha os campos abaixo para criar sua conta corrente!</h2>
             </div>
 
             <form class="principal__formulario" data-formulario>
                 <fieldset class="formulario__campo">
-                    <label class="campo__etiqueta" for="nome">Nome</label>
+                    <label class="campo__etiqueta" for="nome" type="text">Nome</label>
                     <input name="nome" id="nome" class="campo__escrita" />
                     <span class="mensagem-erro"></span>
                 </fieldset>
 
                 <fieldset class="formulario__campo">
-                    <label class="campo__etiqueta" for="email">E-mail</label>
+                    <label class="campo__etiqueta" for="email" type="email">E-mail</label>
                     <input name="email" id="email" class="campo__escrita" />
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="rg">RG</label>
-                    <input name="rg" id="rg" class="campo__escrita campo__escrita--menor" />
+                    <input name="rg" id="rg" class="campo__escrita campo__escrita--menor" type="text" />
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
-                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required />
+                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required  type="text"t/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="aniversario">Data de nascimento</label>
-                    <input name="aniversario" id="aniversario" class="campo__escrita campo__escrita--menor" />
+                    <input name="aniversario" id="aniversario" class="campo__escrita campo__escrita--menor"  type="date"/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__termos">
-                    <input name="termos" class="termos__input">
+                    <input name="termos" class="termos__input" type="checkbox">
                     <p class="termos__texto">Li e estou ciente quanto às condições de tratamento dos meus dados conforme
                         descrito na Política
                         de
@@ -95,7 +95,7 @@
                 </fieldset>
 
                 <div>
-                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar>
+                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar type="submit">
                     <span class="mensagem-erro"></span>
                 </div>
             </form>
