--- a/monibank-main/pages/abrir-conta-form.html
+++ b/monibank-main/pages/abrir-conta-form.html
@@ -51,7 +51,7 @@
             <li>Inicio</li>
             <li class="breadcrumb__pagina">Abrir conta</li>
         </ul>
-
+        
         <section class="formulario">
             <div class="formulario__container">
                 <img src="../img/status-1.png" alt="Etapa um de três" class="formulario__etapas" >
@@ -60,33 +60,33 @@
 
             <form class="principal__formulario" data-formulario>
                 <fieldset class="formulario__campo">
-                    <label class="campo__etiqueta" for="nome" type="text">Nome</label>
-                    <input name="nome" id="nome" class="campo__escrita" />
+                    <label class="campo__etiqueta" for="nome" >Nome</label>
+                    <input name="nome" id="nome" class="campo__escrita" type="text"  minlength="3" required/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
 
                 <fieldset class="formulario__campo">
-                    <label class="campo__etiqueta" for="email" type="email">E-mail</label>
-                    <input name="email" id="email" class="campo__escrita" />
+                    <label class="campo__etiqueta" for="email">E-mail</label>
+                    <input name="email" id="email" class="campo__escrita"   type="email" minlength="4" required/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="rg">RG</label>
-                    <input name="rg" id="rg" class="campo__escrita campo__escrita--menor" type="text" />
+                    <input name="rg" id="rg" class="campo__escrita campo__escrita--menor" type="text" required />
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
-                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required  type="text"t/>
+                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" required  type="text" minlength="11" maxlength="14"pattern="\d{3}.?\d{3\.?\d{3}}-?\d{2}" />
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="aniversario">Data de nascimento</label>
-                    <input name="aniversario" id="aniversario" class="campo__escrita campo__escrita--menor"  type="date"/>
+                    <input name="aniversario" id="aniversario" class="campo__escrita campo__escrita--menor"  type="date" required/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 <fieldset class="formulario__termos">
-                    <input name="termos" class="termos__input" type="checkbox">
+                    <input name="termos" class="termos__input" type="checkbox" required>
                     <p class="termos__texto">Li e estou ciente quanto às condições de tratamento dos meus dados conforme
                         descrito na Política
                         de
@@ -95,7 +95,7 @@
                 </fieldset>
 
                 <div>
-                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar type="submit">
+                    <input value="Avançar" class="formulario__botao" id="enviar" data-botao-enviar type="submit" required>
                     <span class="mensagem-erro"></span>
                 </div>
             </form>
