--- a/pac01/index.html
+++ b/pac01/index.html
@@ -10,7 +10,11 @@
     <canvas id="canvas" width="500" height="500" ></canvas>
 
     <div style="display:none">
-        <img src="" alt="">
+        <img  id="animatons"src="gif/animations.gif" alt="">
+        <img  id="ghosts" src="gif/ghost.png" alt="">
     </div>
+    <script src="ghost.js"></script>
+    <script src="pacman.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
