--- a/pac01/index.html
+++ b/pac01/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PacMan01</title>
+    
 </head>
-<body>
-    <canvas id="canvas" width="500" height="500" ></canvas>
+<body style="margin:0px;">
+    <canvas id="canvas" width="500" height="500"  ></canvas>
 
     <div style="display:none">
-        <img  id="animatons"src="gif/animations.gif" alt="">
+        <img  id="animations"src="gif/animations.gif" alt="">
         <img  id="ghosts" src="gif/ghost.png" alt="">
     </div>
     <script src="ghost.js"></script>
