--- a/pac01/index.html
+++ b/pac01/index.html
@@ -7,7 +7,7 @@
     <title>PacMan01</title>
     
 </head>
-<body style="margin:0px;">
+<body style="margin:0px; background-color:black;">
     <canvas id="canvas" width="500" height="500"  ></canvas>
 
     <div style="display:none">
