--- a/pac01/index.html
+++ b/pac01/index.html
@@ -7,8 +7,8 @@
     <title>PacMan01</title>
     
 </head>
-<body style="margin:0px; background-color:black;">
-    <canvas id="canvas" width="500" height="500"  ></canvas>
+<body style="  background-color:rgb(0, 0, 0);">
+    <canvas id="canvas" width="500" height="510"   ></canvas>
 
     <div style="display:none">
         <img  id="animations"src="gif/animations.gif" alt="">
