--- a/pac01/index.html
+++ b/pac01/index.html
@@ -7,7 +7,7 @@
     <title>PacMan01</title>
     
 </head>
-<body style="  background-color:rgb(0, 0, 0);">
+<body style=" margin:0px; background-color:rgb(0, 0, 0); overflow-y: hidden; overflow-x: hidden;">
     <canvas id="canvas" width="500" height="510"   ></canvas>
 
     <div style="display:none">
